--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,8 @@
 {
     "extends": "airbnb-base",
     "rules": {
-        "no-new": 0
+        "no-new": 0,
+        "no-param-reassign": 0
     },
     "plugins": ["html"]
 }
